# fastapi-board

./: .env  .gitignore  README.md  config.py  containers.py  database.py  main.py  myapi.db  pyproject.toml  requirements.txt
common/: auth.py
domain/answer/: answer_router.py
domain/question/: question_crud.py
frontend/: index.html  package-lock.json  package.json
migrations/: env.py
migrations/versions/: ad2f513e58fe_add_memo_field.py  df83a27448df_create_user_table.py
note/domain/: note.py
user/application/: user_service.py
user/domain/: IUserRepository.py  user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crpyto.py  db_utils.py
