[tool.poetry]
name = "fastapi-board"
version = "0.1.0"
description = ""
authors = ["kimzerovirus <zerovirus96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false